--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,13 +12,15 @@
             padding-bottom: 30px
         &__search
             margin-left: auto
-            max-width: 340px
         &-menu
             padding-top: 22px
             padding-bottom: 22px
             &__link
                 font-size: 12px
                 line-height: 15px
+    .search
+        &__input
+            width: 340px
 @media (max-width: 768px)
     .container
         max-width: 576px
@@ -31,6 +33,7 @@
             display: flex
             width: 16px
             height: 11px
+            padding: 0
             border: none
             background-color: #ffffff
             cursor: pointer
@@ -43,4 +46,4 @@
                 background-color: $text-color
 @media (max-width: 576px)              
     .logo
-        width: 99px
+        width: 99px 
