--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,14 +1,22 @@
 @media (max-width: 1200px) 
     .container
         max-width: 960px
+    .slider
+        width: 600px
+    .swiper
+        &-slide
+            &__image
+                width: 100%
+                height: 100%
+                object-fit: cover
 @media (max-width: 992px)
     .container
-        max-width: 760px
+        max-width: 700px
     .logo
         width: 132px
     .navbar
         &-top
-            padding-top: 20px
+            padding-top: 30px
             padding-bottom: 30px
         &__search
             margin-left: auto
@@ -21,6 +29,19 @@
     .search
         &__input
             width: 340px
+    .hotel
+        &-grid
+            flex-direction: column
+        &__slider
+            margin-bottom: 30px
+        &-right
+            flex-direction: row
+    .booking
+        width: 340px
+    .slider
+        width: 100%
+    .map
+        width: 340px
 @media (max-width: 768px)
     .container
         max-width: 576px
@@ -62,7 +83,21 @@
             &__offer
                 order: -1
                 margin-left: 0
-                
+    .slider
+        height: 350px
+    .hotel
+        &-right
+            flex-direction: column
+            min-height: 450px
+    .booking
+        width: 100%
+    .map
+        width: 100%      
 @media (max-width: 576px)              
     .logo
         width: 99px
+    .slider
+        height: 250px
+    .hotel
+        &__slider
+            margin-bottom: 20px
