--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -53,10 +53,10 @@
         line-height: 10px
     &__counter
         font-size: 14px
-        line-height: 18px 
+        line-height: 18px
 .swiper-container
-    width: 100%px
-    height: 450px
+    width: 100%
+    height: 100%
     position: relative
     border-radius: 8px
     &:after
@@ -72,6 +72,7 @@
         z-index: 20
 .slider
     width: 728px
+    height: 450px
     &-button
         position: absolute
         top: 50%
@@ -169,4 +170,5 @@
 .map
     width: 347px
     height: 213px
-    border-radius: 4px
+    border-radius: 10px
+    overflow: hidden
