--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -10,7 +10,7 @@
                 height: 100%
                 object-fit: cover
 @media (max-width: 992px)
-    .container
+    .container, .newsletter-wrapper
         max-width: 700px
     .logo
         width: 132px
@@ -92,7 +92,13 @@
     .booking
         width: 100%
     .map
-        width: 100%      
+        width: 100% 
+    .newsletter
+        &-wrapper
+            flex-direction: column
+            max-width: 576px
+            width: 92%
+            align-items: flex-start
 @media (max-width: 576px)              
     .logo
         width: 99px
@@ -101,3 +107,9 @@
     .hotel
         &__slider
             margin-bottom: 20px
+    .newsletter
+        padding: 76px 0 83px 0
+        &__title
+            margin-bottom: 37px
+    .subscribe
+        width: 100%
