--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -27,7 +27,7 @@
             text-transform: uppercase
             font-size: 14px
             line-height: 18px
-.logo
+.logo__image
     width: 177px
 .search
     display: flex
