--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -61,7 +61,9 @@
                 background-image: url(../img/arrow-next.svg) 
             &--prev
                 left: 18px
-                background-image: url(../img/arrow-prev.svg) 
+                background-image: url(../img/arrow-prev.svg)
+    &__slider
+        margin: 0
     &-description
         font-style: normal
         font-weight: normal
