--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -1,10 +1,9 @@
 @media (max-width: 1200px) 
     .container
         max-width: 960px
-    .slider
-        width: 600px
-    .swiper
-        &-slide
+    .hotel
+        &-slider
+            width: 600px
             &__image
                 width: 100%
                 height: 100%
@@ -12,7 +11,7 @@
 @media (max-width: 992px)
     .container, .newsletter-wrapper
         max-width: 700px
-    .logo
+    .logo__image
         width: 132px
     .navbar
         &-top
@@ -36,12 +35,16 @@
             margin-bottom: 30px
         &-right
             flex-direction: row
+        &-slider
+            width: 100%
     .booking
         width: 340px
-    .slider
-        width: 100%
     .map
         width: 340px
+    .reviews
+        &-slider
+            &__item
+                max-width: 580px
 @media (max-width: 768px)
     .container
         max-width: 576px
@@ -83,12 +86,12 @@
             &__offer
                 order: -1
                 margin-left: 0
-    .slider
-        height: 350px
     .hotel
         &-right
             flex-direction: column
             min-height: 450px
+        &-slider
+            height: 350px
     .booking
         width: 100%
     .map
@@ -99,17 +102,79 @@
             max-width: 576px
             width: 92%
             align-items: flex-start
+    .reviews
+        &-slider
+            &__item
+                padding: 0 30px 30px
+                &::after, &::before
+                    display: none 
+            &__button
+                top: 32px
+                &--prev
+                    left: 50%
+                    margin-left: -65px
+                    transform: translate(-50%, 0)
+                &--next
+                    right: 50%
+                    margin-right: -65px
+                    transform: translate(50%, 0)
 @media (max-width: 576px)              
-    .logo
+    .logo__image
         width: 99px
-    .slider
-        height: 250px
     .hotel
         &__slider
             margin-bottom: 20px
+        &-slider
+            height: 250px
     .newsletter
         padding: 76px 0 83px 0
         &__title
             margin-bottom: 37px
     .subscribe
         width: 100%
+@media (min-width: 320px) and (max-width: 480px)
+    .container
+        max-width: 280px
+    .navbar
+        &-top
+            padding-top: 28px
+            padding-bottom: 28px
+    .hotel
+        padding-top: 0
+        padding-bottom: 40px
+        &-right
+            min-height: 402px
+        &-slider
+            height: 179px
+        &-info
+            &__text
+                margin-bottom: 18px
+    .stars
+        margin-right: 15px
+    .booking
+        padding: 28px 22px
+    .map
+        height: 172px
+    .newsletter
+        max-height: 319px
+        &-wrapper
+            max-width: 280px
+        &-title
+            font-size: 20px
+            line-height: 25px
+            &__strong
+                font-size: 30px
+                line-height: 38px
+    .reviews
+        &__title
+            width: 245px
+            margin: auto
+            font-size: 18px
+            line-height: 23px
+            margin-bottom: 42px
+        &-slider
+            &__button
+                &--prev
+                  transform: translateX(-125%) 
+                &--next
+                  transform: translateX(125%)
