--- a/sass/blocks/_reviews.sass
+++ b/sass/blocks/_reviews.sass
@@ -7,13 +7,14 @@
         line-height: 45px
         text-align: center
         text-transform: uppercase
+        margin-top: 0
         margin-bottom: 70px
     &-slider
         &__item
             display: flex
             flex-direction: column
             align-items: center
-            width: 730px
+            max-width: 730px
             margin: 45px auto 0
             background-color: #fff
             border-radius: 8px
@@ -39,8 +40,8 @@
                 background-repeat: no-repeat
         &__button
             position: absolute
-            top: 50%
-            transform: translateY(-50%)
+            top: 39%
+            transform: translateY(100%)
             width: 30px
             height: 30px
             background-repeat: no-repeat
@@ -52,9 +53,11 @@
             z-index: 99
             outline: none
             &--prev
+                transform: translateX(50%)
                 background-image: url(../img/arrow-left-secondary.svg)
                 left: 0
             &--next
+                transform: translateX(-50%)
                 background-image: url(../img/arrow-right-secondary.svg)
                 right: 0
         &__profile
@@ -62,6 +65,7 @@
             flex-direction: column
             align-items: center
             margin-top: -45px
+            margin-bottom: 32px
         &__avatar
             width: 90px
             height: 90px
@@ -74,6 +78,7 @@
             font-size: 12px
             line-height: 15px 
             color: $primary
+            margin-top: 0
             margin-bottom: 10px
         &__date
             font-style: normal
