create: checked overflowing

--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -6,6 +6,7 @@
         align-items: center
         justify-content: space-between
         margin-bottom: 20px
+        word-break: break-word
         &__offer
             margin-left: 14px
             margin-top: 4px
@@ -91,6 +92,7 @@
     color: $light
 .rating
     max-width: 65px
+    min-width: 65px
     min-height: 45px
     text-align: center
     color: $light
@@ -110,6 +112,7 @@
     min-height: 210px
     padding: 28px
     font-family: 'Nunito', sans-serif
+    word-break: break-word
     &__info
         display: flex
         justify-content: space-between
