--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -59,6 +59,8 @@
     &__button
         position: absolute
         min-width: 65px
+        max-width: 100px
+        overflow: hidden
         right: 0
         top: 0
         height: 100%
