--- a/css/style.css
+++ b/css/style.css
@@ -520,6 +520,7 @@ template {
       -ms-flex-pack: justify;
           justify-content: space-between;
   margin-bottom: 20px;
+  word-break: break-word;
 }
 
 .hotel-info__offer {
@@ -666,6 +667,7 @@ template {
 
 .rating {
   max-width: 65px;
+  min-width: 65px;
   min-height: 45px;
   text-align: center;
   color: #ffffff;
@@ -691,6 +693,7 @@ template {
   min-height: 210px;
   padding: 28px;
   font-family: 'Nunito', sans-serif;
+  word-break: break-word;
 }
 
 .booking__info {
@@ -905,6 +908,8 @@ template {
 .subscribe__button {
   position: absolute;
   min-width: 65px;
+  max-width: 100px;
+  overflow: hidden;
   right: 0;
   top: 0;
   height: 100%;
