--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -135,6 +135,9 @@
 @media (min-width: 320px) and (max-width: 480px)
     .container
         max-width: 280px
+    .menu
+        &-button
+            align-items: top
     .navbar
         &-top
             padding-top: 28px
