--- a/css/style.css
+++ b/css/style.css
@@ -1090,11 +1090,10 @@ template {
     padding-bottom: 30px;
   }
   .navbar__search {
-    margin-left: auto;
+    margin-left: 47px;
   }
   .navbar-menu {
-    padding-top: 22px;
-    padding-bottom: 22px;
+    padding: 22px 13px;
   }
   .navbar-menu__link {
     font-size: 12px;
@@ -1102,6 +1101,9 @@ template {
   }
   .search__input {
     width: 340px;
+  }
+  .hotel {
+    padding-bottom: 60px;
   }
   .hotel-grid {
     -webkit-box-orient: vertical;
@@ -1123,16 +1125,41 @@ template {
   }
   .booking {
     width: 340px;
+    padding: 26px 22px;
   }
   .map {
     width: 340px;
+    height: 210px;
   }
   .reviews-slider__item {
     max-width: 580px;
   }
+  .reviews-slider__item::after, .reviews-slider__item::before {
+    display: none;
+  }
+  .reviews-slider__button--prev {
+    left: 11%;
+    margin-left: -70px;
+    -webkit-transform: translateY(56%);
+            transform: translateY(56%);
+  }
+  .reviews-slider__button--next {
+    right: 11%;
+    margin-right: -70px;
+    -webkit-transform: translateY(56%);
+            transform: translateY(56%);
+  }
+  .reviews__title {
+    font-size: 30px;
+    line-height: 38px;
+    margin-bottom: 50px;
+  }
+  .newsletter {
+    padding: 92px 0;
+  }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .container {
     max-width: 576px;
     width: 92%;
@@ -1224,9 +1251,6 @@ template {
   }
   .reviews-slider__item {
     padding: 0 30px 30px;
-  }
-  .reviews-slider__item::after, .reviews-slider__item::before {
-    display: none;
   }
   .reviews-slider__button {
     top: 32px;
