--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,6 +8,9 @@
                 width: 100%
                 height: 100%
                 object-fit: cover
+    .card
+        width: 230px
+        height: 230px
 @media (max-width: 992px)
     .container, .newsletter-wrapper
         max-width: 700px
@@ -64,6 +67,18 @@
             margin-bottom: 50px
     .newsletter
         padding: 92px 0
+    .activities
+        padding: 34px 0 98px 0
+        &-wrapper
+            flex-wrap: wrap
+    .card
+        width: 339px
+        height: 255px
+        margin-bottom: 18px
+        &__title
+            maw: 160px
+            min-height: 40px
+            word-break: break-word
 @media (max-width: 767px)
     .container
         max-width: 576px
@@ -135,6 +150,9 @@
                     right: 50%
                     margin-right: -65px
                     transform: translate(50%, 0)
+    .card
+        width: 49%
+        height: 255px
 @media (max-width: 576px)              
     .logo__image
         width: 99px
@@ -186,6 +204,7 @@
                 font-size: 30px
                 line-height: 38px
     .reviews
+        padding: 40px 0 64px 0
         &__title
             width: 245px
             margin: auto
@@ -198,3 +217,25 @@
                   transform: translateX(-125%) 
                 &--next
                   transform: translateX(125%)
+    .activities
+        padding: 0 0 98px 0
+        &__title
+            font-size: 18px
+            line-height: 23px
+            margin-bottom: 36px
+        &-wrapper
+            flex-direction: column
+            flex-flow: wrap
+        &__card
+            &:nth-of-type(1)
+                order: 1
+            &:nth-of-type(2)
+                order: 3
+                margin-top: 6px
+            &:nth-of-type(3)
+                order: 2
+            &:nth-of-type(4)
+                order: 4
+    .card
+        width: 100%
+        height: 255px
