--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -11,6 +11,18 @@
     .card
         width: 230px
         height: 230px
+    .flash-block
+        height: 500px
+        padding-top: 40px
+        padding-left: 40px
+        padding-bottom: 25px
+        &__booking
+            margin-bottom: 25px
+        &__description
+            margin-bottom: 30px
+    .flash-card
+        &__title
+            margin-bottom: 20px
 @media (max-width: 992px)
     .container, .newsletter-wrapper
         max-width: 700px
@@ -79,6 +91,10 @@
             maw: 160px
             min-height: 40px
             word-break: break-word
+    .packages
+        &-wrapper
+            grid-template-columns: repeat(2, 1fr)
+            grid-template-rows: repeat(3, 500px)
 @media (max-width: 767px)
     .container
         max-width: 576px
@@ -153,6 +169,17 @@
     .card
         width: 49%
         height: 255px
+    .packages
+        &-wrapper
+            grid-template-columns: repeat(2, 1fr)
+            grid-template-rows: repeat(3, 1fr)
+    .flash-block
+        padding-top: 25px
+        padding-left: 20px
+        padding-bottom: 25px
+    .small-flash
+        padding-left: 25px
+        padding-right: 15px
 @media (max-width: 576px)              
     .logo__image
         width: 99px
@@ -167,6 +194,30 @@
             margin-bottom: 37px
     .subscribe
         width: 100%
+    .packages
+        &-wrapper
+           grid-template-columns: 1fr
+           grid-template-rows: repeat(5, 500px)
+           column-gap: 0
+        &__card
+            display: grid
+            grid-template-rows: 50% 50%
+            grid-template-columns: none
+            grid-column: span 1
+        &__title
+            margin-bottom: 50px
+        &-title
+            font-size: 26px
+            line-height: 34px
+    .flash-card
+        &__label
+            &--big
+                font-size: 8px
+                line-height: 10px
+                padding: 4px 9px
+    .flash-block
+        &__description
+            display: none
 @media (min-width: 320px) and (max-width: 480px)
     .container
         max-width: 280px
@@ -239,3 +290,7 @@
     .card
         width: 100%
         height: 255px
+    .packages
+        &-title
+            font-size: 18px
+            line-height: 23px
