--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -88,7 +88,7 @@
         height: 255px
         margin-bottom: 18px
         &__title
-            maw: 160px
+            max-width:  160px
             min-height: 40px
             word-break: break-word
     .packages
