fix: bem naming

--- a/css/style.css
+++ b/css/style.css
@@ -1233,7 +1233,10 @@ template {
 .flash-card__label--big {
   font-size: 12px;
   line-height: 15px;
-  padding: 8px 11px;
+  padding-top: 8px;
+  padding-bottom: 7px;
+  padding-right: 21px;
+  padding-left: 11px;
 }
 
 .flash-card__block {
