--- a/sass/blocks/_packages.sass
+++ b/sass/blocks/_packages.sass
@@ -50,7 +50,10 @@
         &--big
             font-size: 12px
             line-height: 15px
-            padding: 8px 11px
+            padding-top: 8px
+            padding-bottom: 7px
+            padding-right: 21px
+            padding-left: 11px
     &__block
         background-color: $dark
         width: 100%
