--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -33,6 +33,19 @@
             grid-column: span 2
         &-form
             grid-column: span 2
+    &__bottom
+        margin-top: 70px
+        grid-column: span 4
+        display: flex
+        align-items: center
+        justify-content: space-between
+        &-links
+            text-decoration: none
+            color: $forms
+            font-style: normal
+            font-weight: normal
+            font-size: 12px
+            line-height: 15px
     &__legal
         justify-self: end
     &__form
@@ -54,7 +67,9 @@
         &--inline
             margin: 0 43px 0 0
         &--mb-3
-            margin-bottom: 27px
+            margin-bottom: 34px
+        &--mb-2
+            margin-bottom: 25px
         &--mt-3
             margin-top: 10px
     &__item
@@ -89,6 +104,10 @@
         height: 50px
         margin-bottom: 15px
         flex-basis: 48%
+        font-style: normal
+        font-weight: normal
+        font-size: 12px
+        line-height: 15px
     &__message
         background-color: $light
         border-radius: 4px
@@ -97,6 +116,10 @@
         flex-basis: 100%
         margin-bottom: 23px
         height: 123px
+        font-style: normal
+        font-weight: normal
+        font-size: 12px
+        line-height: 15px
     &__button
         min-width: 160px
         min-height: 50px
@@ -105,10 +128,26 @@
         background-color: $primary
         color: $light
         border-radius: 4px
+        font-style: normal
+        font-weight: bold
+        font-size: 12px
+        line-height: 15px
     &__info
         font-style: normal
         font-weight: bold
         font-size: 12px
         line-height: 15px
         color: $forms
-            
+.bottom
+    &__pay
+        width: 136px
+        height: 22px
+    &__img
+        width: 100% 
+        height: 100%
+    &__pages
+        margin-right: 277px
+        margin-left: auto
+        display: flex
+        justify-content: space-between
+        width: 283px
