--- a/css/style.css
+++ b/css/style.css
@@ -1585,6 +1585,7 @@ template {
   font-weight: normal;
   font-size: 12px;
   line-height: 15px;
+  resize: none;
 }
 
 .footer__button {
@@ -1757,7 +1758,6 @@ template {
     margin-bottom: 18px;
   }
   .card__title {
-    max-width: 160px;
     min-height: 40px;
     word-break: break-word;
   }
@@ -1958,6 +1958,13 @@ template {
     padding-left: 25px;
     padding-right: 15px;
   }
+  .footer__input {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+  }
+  .bottom__pages {
+    margin-right: 150px;
+  }
 }
 
 @media (max-width: 576px) {
@@ -2010,6 +2017,64 @@ template {
   }
   .flash-block__description {
     display: none;
+  }
+  .footer-wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+  .footer__logo {
+    -ms-grid-row: 1;
+    grid-row: 1;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__social-network {
+    -ms-grid-row: 2;
+    grid-row: 2;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    margin-left: 0;
+  }
+  .footer__additional {
+    -ms-grid-row: 4;
+    grid-row: 4;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__categories {
+    -ms-grid-row: 5;
+    grid-row: 5;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__legal {
+    -ms-grid-row: 3;
+    grid-row: 3;
+    -ms-grid-column: 1;
+    grid-column: 1;
+    margin-left: 0;
+  }
+  .footer__contact-details {
+    -ms-grid-row: 6;
+    grid-row: 6;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__contact-form {
+    -ms-grid-row: 7;
+    grid-row: 7;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .footer__bottom {
+    -ms-grid-row: 8;
+    grid-row: 8;
+    -ms-grid-column: 1;
+    grid-column: 1;
+  }
+  .bottom__pages {
+    width: 70%;
+    margin-right: 20px;
   }
 }
 
@@ -2081,7 +2146,7 @@ template {
             transform: translateX(125%);
   }
   .activities {
-    padding: 0 0 98px 0;
+    padding: 0 0 42px 0;
   }
   .activities__title {
     font-size: 18px;
@@ -2124,6 +2189,77 @@ template {
   .packages-title {
     font-size: 18px;
     line-height: 23px;
+  }
+  .footer {
+    padding-top: 66px;
+  }
+  .footer-wrapper {
+    grid-row-gap: 30px;
+  }
+  .footer__icon {
+    margin-right: 0;
+  }
+  .footer__icon-wrapper {
+    min-width: 31px;
+  }
+  .footer__social-network {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .footer__social-links {
+    width: 85px;
+  }
+  .footer__title {
+    margin: 0 0 17px 0;
+  }
+  .footer__title--mt-3 {
+    margin-top: 5px;
+  }
+  .footer__title--mb-2 {
+    margin-bottom: 25px;
+  }
+  .footer__title--mb-3 {
+    margin-bottom: 20px;
+    margin-top: 10px;
+  }
+  .footer__title--inline {
+    margin-top: 15px;
+    margin-bottom: 20px;
+  }
+  .footer__contact-details {
+    width: 270px;
+  }
+  .footer__contact-form {
+    width: 281px;
+  }
+  .footer__button {
+    -webkit-box-ordinal-group: 11;
+        -ms-flex-order: 10;
+            order: 10;
+  }
+  .footer__info {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin-bottom: 15px;
+  }
+  .footer__bottom {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-top: 0;
+  }
+  .footer__message {
+    margin-bottom: 10px;
+  }
+  .bottom__pages {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin-right: 0;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: start;
+    margin-bottom: 10px;
   }
 }
 /*# sourceMappingURL=style.css.map */
