--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -88,7 +88,6 @@
         height: 255px
         margin-bottom: 18px
         &__title
-            max-width:  160px
             min-height: 40px
             word-break: break-word
     .packages
@@ -220,6 +219,12 @@
     .small-flash
         padding-left: 25px
         padding-right: 15px
+    .footer
+        &__input
+            flex-basis: 100%
+    .bottom
+        &__pages
+            margin-right: 150px
 @media (max-width: 576px)              
     .logo__image
         width: 99px
@@ -258,6 +263,41 @@
     .flash-block
         &__description
             display: none
+    .footer
+        &-wrapper
+            grid-template-columns: 1fr
+        &__logo
+            grid-row: 1
+            grid-column: 1
+        &__social
+            &-network
+                grid-row: 2
+                grid-column: 1
+                margin-left: 0
+        &__additional
+            grid-row: 4
+            grid-column: 1
+        &__categories
+            grid-row: 5
+            grid-column: 1
+        &__legal
+            grid-row: 3
+            grid-column: 1
+            margin-left: 0
+        &__contact
+            &-details
+                grid-row: 6
+                grid-column: 1
+            &-form
+                grid-row: 7
+                grid-column: 1
+        &__bottom
+            grid-row: 8
+            grid-column: 1
+    .bottom
+        &__pages
+            width: 70%
+            margin-right: 20px
 @media (min-width: 320px) and (max-width: 480px)
     .container
         max-width: 280px
@@ -309,7 +349,7 @@
                 &--next
                   transform: translateX(125%)
     .activities
-        padding: 0 0 98px 0
+        padding: 0 0 42px 0
         &__title
             font-size: 18px
             line-height: 23px
@@ -334,3 +374,50 @@
         &-title
             font-size: 18px
             line-height: 23px
+    .footer
+        padding-top: 66px
+        &-wrapper
+            grid-row-gap: 30px
+        &__icon
+            margin-right: 0
+            &-wrapper
+                min-width: 31px
+        &__social
+            &-network
+                flex-direction: column
+            &-links
+                width: 85px
+        &__title
+            margin: 0 0 17px 0
+            &--mt-3
+                margin-top: 5px
+            &--mb-2
+                margin-bottom: 25px
+            &--mb-3
+                margin-bottom: 20px
+                margin-top: 10px
+            &--inline
+                margin-top: 15px
+                margin-bottom: 20px
+        &__contact
+            &-details
+                width: 270px
+            &-form
+                width: 281px
+        &__button
+            order: 10
+        &__info
+            flex-basis: 100%
+            margin-bottom: 15px
+        &__bottom
+            flex-wrap: wrap
+            margin-top: 0
+        &__message
+            margin-bottom: 10px
+    .bottom
+        &__pages
+            flex-basis: 100%
+            margin-right: 0
+            align-items: start
+            margin-bottom: 10px
+        
