--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -120,6 +120,7 @@
         font-weight: normal
         font-size: 12px
         line-height: 15px
+        resize: none
     &__button
         min-width: 160px
         min-height: 50px
