--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -138,9 +138,44 @@
     .container
         max-width: 576px
         width: 92%
+    body
+        padding-top: 78px
     .navbar
-        &__search, &-menu, &__user
+        &__search
+            margin: auto
+        &--mobile
+            &--fixed
+                position: fixed
+                left: 0
+                top: 0
+                right: 0
+                z-index: 99
+        &__user, &__search
+            &--mobile
+                &--hidden
+                    display: none
+                &--visible
+                    display: flex
+        &-bottom
             display: none
+            position: fixed
+            padding-top: 30px
+            left: 0
+            right: 0
+            bottom: 0
+            top: 78px
+            &--visible
+                display: block
+        &__user
+            flex-direction: column
+            justify-content: center
+        &-menu
+            flex-direction: column
+            &__item
+                margin-bottom: 17px
+                &--mobile
+                    &--visible
+                        display: block
     .menu
         &-button
             display: flex
@@ -157,6 +192,12 @@
                 width: 16px
                 height: 1px
                 background-color: $text-color
+    .user
+        &__name
+            &--light
+                color: $light
+                margin-left: 0
+                margin-top: 10px
     .stars
         flex-basis: auto
     .hotel
@@ -306,8 +347,23 @@
             align-items: top
     .navbar
         &-top
-            padding-top: 28px
+            padding-top: 24px
             padding-bottom: 28px
+        &-bottom
+            top: 70px
+            padding-top: 10px
+            &--visible
+                overflow-y: scroll
+        &__search
+            width: 245px
+            margin: auto
+            height: 40px
+            margin-bottom: 8px
+        &-menu
+            &__item
+                &--mobile
+                    &--visible
+                        margin-bottom: 27px
     .hotel
         padding-top: 0
         padding-bottom: 40px
