--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -188,6 +188,7 @@
             align-items: center
             justify-content: space-between
             flex-direction: column
+            outline: none
             &__line
                 width: 16px
                 height: 1px
