--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -109,7 +109,8 @@
             grid-row: 1 / 2
             grid-column: span 2
         &__input
-            flex-basis: 47%
+            &-proup
+                flex-basis: 47%
         &__social
             &-network
                 grid-row: 1 / 2
@@ -274,7 +275,8 @@
         padding-right: 15px
     .footer
         &__input
-            flex-basis: 100%
+            &-group
+                flex-basis: 100%
     .bottom
         &__pages
             margin-right: 150px
