--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -97,12 +97,14 @@
         text-decoration: none
         color: inherit
     &__input
-        margin-bottom: 15px
-        flex-basis: 48%
-        font-style: normal
-        font-weight: normal
-        font-size: 12px
-        line-height: 15px
+        width: 100%
+        &-group
+            margin-bottom: 15px
+            flex-basis: 48%
+            font-style: normal
+            font-weight: normal
+            font-size: 12px
+            line-height: 15px
     &__message
         height: 123px
         flex-basis: 100%
