--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -16,6 +16,12 @@
             text-transform: uppercase
         &__description
             margin: 0
+        &__back-button
+            color: $dark
+            border: 1px solid $primary
+            padding: 10px 10px
+            border-radius: 8px
+            text-decoration: none
     &-name
         font-size: 24px
         line-height: 30px
