--- a/sass/blocks/_modal.sass
+++ b/sass/blocks/_modal.sass
@@ -15,7 +15,7 @@
             opacity: 1
     &__dialog
         position: fixed
-        top: 35.5%
+        top: 50%
         left: 50%
         max-width: 478px
         padding: 33px 88px
@@ -49,7 +49,7 @@
         text-align: center
     &__input
         width: 100%
-        margin-bottom: 15px
+        margin-top: 15px
         font-style: normal
         font-weight: normal
         font-size: 12px
@@ -57,7 +57,9 @@
     &__message
         width: 100%
         min-height: 123px
-        margin-bottom: 15px
+        margin-top: 15px
+    &__button
+        margin-top: 15px
     &__info
         font-style: normal
         font-weight: bold
