added tz changes

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -61,6 +61,10 @@
     .map
         width: 340px
         height: 210px
+        &__img
+            display: none
+        &__frame
+            display: block
     .reviews
         &-slider
             &__item
