--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -44,6 +44,9 @@ img
     align-items: center
     justify-content: space-between
     flex-wrap: wrap
+button
+    outline: none
+    cursor: pointer
 input
     outline: none
     cursor: pointer
