--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -110,6 +110,8 @@
     &__counter
         font-size: 14px
         line-height: 18px
+        &-small
+            font-size: 10px
 .booking
     background-color: $dark
     color: $light
@@ -190,3 +192,9 @@
     height: 213px
     border-radius: 10px
     overflow: hidden
+    &__frame
+        display: none
+    &__img
+        height: 100%
+        width: 100%
+        object-fit: cover
