--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -50,13 +50,21 @@
         justify-self: end
     &__form
         display: flex
-        align-items: center
+        align-items: flex-start
         justify-content: space-between
         flex-wrap: wrap
     &__ul
         padding: 0
         margin: 0
         list-style: none
+    &__telephones
+        margin: 0
+    &__num
+        text-decoration: none
+        color: $forms
+    &__mail
+        text-decoration: none
+        color: $forms
     &__title
         font-style: normal
         font-weight: bold
@@ -109,6 +117,7 @@
         height: 123px
         flex-basis: 100%
         margin-bottom: 23px
+        outline: none
     &__info
         font-style: normal
         font-weight: bold
